# webserv-old

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  HTTPServer.cpp  HTTPServer.hpp  IOTask.cpp  IOTask.hpp  README.md  codecov.yml  main.cpp
.github/ISSUE_TEMPLATE/: featureのテンプレート.md  feature以外のテンプレート.md  pbiのテンプレート.md  task-pbi.md  スプリント議事録用.md
.github/workflows/: build.yml  codecov.yml  ctest.yml  daily-scrum.yml  format.yml  lint.yml  reminder.yml
cmd/: webserv.cpp
conf/: default.conf  default_parse_comment.conf
data/: simple_post_request  simple_request
docs/: config.md
internal/: CMakeLists.txt
internal/config/: config.cpp  config.hpp  route_config.cpp  route_config.hpp  tokenizer.cpp  tokenizer.hpp  virtual_server_config.cpp  virtual_server_config.hpp
internal/handler/: handler.cpp  handler.hpp  handler_interface.hpp
internal/hello/: hello.cpp  hello.hpp
internal/http/: context.cpp  context.hpp  method.cpp  method.hpp  parse_raw_request.cpp  request.cpp  request.hpp  request_parser.cpp  request_parser.hpp  request_reader.cpp  request_reader.hpp  response_writer.cpp  response_writer.hpp  status.cpp  status.hpp
internal/http/interface/: context.hpp
internal/io/: reader.cpp  reader.hpp
internal/server/: server.cpp  server.hpp
internal/task/: accept.cpp  accept.hpp  callback_interface.hpp  io_task.cpp  io_task.hpp  io_task_manager.cpp  io_task_manager.hpp  read_request.cpp  read_request.hpp  task_interface.hpp  write_file.cpp  write_file.hpp
internal/utils/: option.hpp  ownership.hpp  result.hpp  try.hpp  unit.hpp  utils.cpp  utils.hpp
scripts/: add_test.sh
scripts/template/: test_template.cpp
tests/: CMakeLists.txt  buffered_reader_test.cpp  config_parser_test.cpp  context_test.cpp  default_error_page_test.cpp  fd_reader_test.cpp  hello_test.cpp  http_method_test.cpp  option_test.cpp  read_request_test.cpp  request_parser_test.cpp  response_writer_test.cpp  result_test.cpp  stream_utils_test.cpp  string_utils_test.cpp  to_string_test.cpp
tests/utils/: assert_output.hpp  stream_buffer_switcher.cpp  stream_buffer_switcher.hpp
