add_library(webserv_internal STATIC
        config/config.cpp
        config/config.hpp
        config/route_config.cpp
        config/route_config.hpp
        http/method.hpp
        config/virtual_server_config.cpp
        config/virtual_server_config.hpp
        http/status.hpp
        http/status.cpp
        utils/utils.hpp
        http/request.cpp
        http/request.hpp
        utils/option.hpp
        utils/result.hpp
        task/io_task.hpp
        task/callback_interface.hpp
        handler/handler.hpp
        utils/unit.hpp
        server/server.cpp
        server/server.hpp
        task/io_task_manager.cpp
        task/io_task_manager.hpp
        task/accept.cpp
        task/accept.hpp
        task/io_task.cpp
        task/read_request.cpp
        task/read_request.hpp
        handler/handler.cpp
        task/write_file.cpp
        task/write_file.hpp
        http/response_writer.hpp
        http/response_writer.cpp
        http/context.cpp
        http/context.hpp
        http/request_parser.cpp
        http/request_parser.hpp
        utils/utils.cpp
        http/method.cpp
        io/reader.cpp
        io/reader.hpp
        utils/ownership.hpp
        http/interface/context.hpp
)
